wal-rsx/tests/literals/single_literal_fail.stderr
error: Byte string literals are not supported
 --> tests/literals/single_literal_fail.rs:4:12
  |
4 |     rsx! { b"val" };
  |            ^^^^^^
