wal-rsx/tests/literals/single_literal_fail.rs
use wal_rsx::rsx;

fn main() {
    rsx! { b"val" };
}
